force-app/main/default/objects/Vehicle__c/fields/Engine_TYpe__c.field-meta.xml
<CustomField>
    <fullName>Engine_TYpe__c</fullName>
    <label>Engine TYpe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>