force-app/main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>