force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FE130</fullName>
            </value>
            <value>
                <fullName>FE160</fullName>
            </value>
            <value>
                <fullName>FE180</fullName>
            </value>
            <value>
                <fullName>Actros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>