force-app/main/default/objects/Vehicle__c/fields/Truck_Number__c.field-meta.xml
<CustomField>
    <fullName>Truck_Number__c</fullName>
    <label>Truck Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>